2008-01-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_about.c: check for the GTK+ version and
	adjust the property name accordingly.

2008-01-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpprojection.c (gimp_projection_idle_render_init):
	decreased the priority of the projection idle renderer to 150,
	halfway between G_PRIORITY_HIGH_IDLE and G_PRIORITY_DEFAULT_IDLE.
	Fixes bug #511214.

2008-01-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/paint/gimpbrushcore.c (gimp_brush_core_create_bound_segs):
	smooth the brush mask in order to obtain a simpler boundary.
	Addresses bug #304798.

2008-01-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/imagemap/imap_csim.y: increased buffer size. Addresses
	bug #511072.

	* plug-ins/imagemap/imap_csim_parse.[ch]: regenerated.

2008-01-21  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/widgets/gimpcolorbar.c (gimp_color_bar_class_init): fix the
	ID of the "histogram-channel" property.

2008-01-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* app/base/lut-funcs.c (equalize_lut_fuct): Don't 
	equalize the alpha channel.  Fixes bug #510210.
	
2008-01-15  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_notify_preview):
	check for image_map_tool->image_map also when the preview is
	switched on, not only when it's switched off.

2008-01-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/bumpmap.c
	* plug-ins/script-fu/scripts/swirltile.scm: applied patch from
	Ulf-D. Ehlert that catches a potential division by zero in the
	Bumpmap plug-in and adjusts the range of the Depth parameter in
	the Swirl-Tile script (bug #509608).

2008-01-14  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/script-fu-compat.init: Fixed definition
	of 'prog1' due to recent fixes enforcing R5RS syntax for 'let'.
