@@ -1,5 +1,10 @@
 2008-01-23  Sven Neumann  <sven@gimp.org>
 
+	* app/dialogs/about-dialog.c (about_dialog_create): use a run-time
+	check for the GTK+ version instead of a compile time one.
+
+2008-01-23  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/imagemap/imap_about.c: check for the GTK+ version and
 	adjust the property name accordingly.
 
